# api/models/tweet.go
@@ -12,3 +12,21 @@ type Tweet struct {
 	CreatedAt  time.Time `json:"created_at"`
 	UpdatedAt  time.Time `json:"updated_at"`
 }
+
+type CreateTweet struct {
+	UserID  string `json:"user_id"`
+	Content string `json:"content"`
+	Media   string `json:"media"`
+}
+
+type UpdateTweet struct {
+	ID      string `json:"id"`
+	UserID  string `json:"user_id"`
+	Content string `json:"content"`
+	Media   string `json:"media"`
+}
+
+type TweetsResponse struct {
+	Count  int     `json:"count"`
+	Tweets []Tweet `json:"tweets"`
+}
